# Sorting_Control_PC

./: CMakeLists.txt  README.md
include/: AnalysisWindow.hpp  Application.hpp  Chart.hpp  ChartView.hpp  Communication.hpp  Device.hpp  FrameInfoWindow.hpp  Graph.hpp  Gui.hpp  Helpers.hpp  InfoWindow.hpp  MainWindow.hpp  Signal.hpp  Window.hpp
res/: config.txt
src/: AnalysisWindow.cpp  Application.cpp  Chart.cpp  ChartView.cpp  Communication.cpp  Device.cpp  FrameInfoWindow.cpp  Graph.cpp  Helpers.cpp  InfoWindow.cpp  MainWindow.cpp  Signal.cpp  Window.cpp  main.cpp
